@@ -1,11 +1,16 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+  13 Apr 2007; Roy Marples <uberlord@gentoo.org>:
+
+	Fix module loading, #174360.
+	s-s-d now changes group when changing user, #174362.
+
 * baselayout-2.0.0_alpha1 (11 Apr 2007)
 
   07 Apr 2007; Mike Frysinger <vapier@gentoo.org>:
 
-    "modules-update" -> "update-modules".
+  	"modules-update" -> "update-modules".
 
   05 Apr 2007; Roy Marples <uberlord@gentoo.org>:
 
